[package]
name = "wiser"
version = "0.2.4"
description = "Access to the a Drayton Wiser hub."
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
repository = "https://github.com/Mossop/wiser/"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env"] }
flexi_logger = { version = "0.24.2", features = ["colors"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
time = "0.3.17"
tokio = { version = "1.23.0", features = ["full"] }
